learning/k8s/example4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: ingress-localhost
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: ingress-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localhost
                port:
                  number: 5050
